--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "structured-navigator",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Dynamic table of contents with cross-note references and scoped views",
 	"main": "main.js",
 	"scripts": {
@@ -14,7 +14,7 @@
 		"@types/node": "^20.10.0",
 		"builtin-modules": "^3.3.0",
 		"esbuild": "^0.19.8",
-		"obsidian": "latest",
+		"obsidian": "^1.10.3",
 		"typescript": "^5.3.2"
 	}
 }
